# isabella-crypto

./: .gitattributes  .gitignore  Makefile  README.md  collect.sh  generate.sh
.codex/: config.toml
.codex/skills/: isabelle-algebra  isabelle-basics  isabelle-code-generation  isabelle-datatypes  (+4 more)
.github/: dependabot.yml
Canon/: Prelude.thy  README.md  ROOT  TODO-sorry-proofs.md
bench/: README.md  run-benchmarks.sh  summarize.sh  verify-outputs.sh
eval/: README.md  clean.sh  collect_haskell.py  debug.sh  ensure_root_file.py  eval-runner.sh  extract_code.py  harness.md  record_step.py  run-prompt.sh  scaffold.sh  steps_to_verify.py  verify.sh  write_run_metadata.py
haskell/: cabal.project  collect.sh
isabella.hs/: README.md  isabella.cabal
isabella.ml/: LICENSE  dune  dune-project  isabella.opam
isabella.ts/: package-lock.json  package.json  tsconfig.json
ocaml/isabella/: dune-project
ocaml/isabella/src/Lattice/: lwe_regev.ml
ocaml/isabella/src/lattice/: dune  lwe_regev.ml
old/: build-js.sh
plan/: EXPORT_PROVENANCE.md  LATTICE_CANON_MVP.md  LAZER_FORMALIZATION_GAPS.md  MIGRATION_MAP.md  PROGRESS.md  WORKFLOW_IMPROVEMENTS.md
ralph/: README.md  isabella-loop.sh  ralph-loop.sh  ralph-review.yaml  ralph-work.yaml  step-loop-v2.sh  step-loop.sh
scripts/: check_formalization.sh  dispatch_lazer_optional_ci.sh  local-ci.sh  test-ntt-proof.sh
tests/: README.md  jest.config.js  package-lock.json  package.json
website/: ai.html  benchmarks.html  benchmarks.js  codegen.html  config.js  index.html  isabelle.html  lattice.html  main.js  style.css
(+263 files in other folders)
