(lang dune 3.0)
(name isabella)
(version 0.1.0)

(generate_opam_files true)

(source (github anthropics/isabella-crypto))
(license MIT)
(authors "Isabella Project")
(maintainers "isabella@example.com")

(package
 (name isabella)
 (synopsis "Verified lattice cryptography from Isabelle/HOL")
 (description "Formally verified lattice-based cryptographic primitives extracted from Isabelle/HOL proofs, compiled to JavaScript/WebAssembly via js_of_ocaml.")
 (depends
  (ocaml (>= 4.14))
  (dune (>= 3.0))
  (zarith (>= 1.12))
  (zarith_stubs_js (>= 0.16))
  (js_of_ocaml (>= 5.0))
  (js_of_ocaml-ppx (>= 5.0))))
